{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 11,
  "lineage": "4dbccdf2-a3d9-068a-e4b9-dd75815a40d7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-067d1e60475437da2",
            "arn": "arn:aws:ec2:us-east-1:561884377569:instance/i-03663bc02b0c8ec40",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03663bc02b0c8ec40",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new account",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04656aa50bfe9382c",
            "private_dns": "ip-10-0-1-79.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.79",
            "public_ip": "52.91.190.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d479a01f3fb80507",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b14ceb96762106e",
            "tags": {
              "Name": "web1 ecomm"
            },
            "tags_all": {
              "Name": "web1 ecomm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ab8b12659e69e36"
            ]
          },
          "dependencies": [
            "aws_security_group.pub-sg",
            "aws_subnet.Web-1-subnet",
            "aws_vpc.okvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561884377569:internet-gateway/igw-009147e0d35c323cd",
            "id": "igw-009147e0d35c323cd",
            "owner_id": "561884377569",
            "tags": {
              "Name": "okvpc-igw"
            },
            "tags_all": {
              "Name": "okvpc-igw"
            },
            "vpc_id": "vpc-090e88e821d7965eb"
          },
          "dependencies": [
            "aws_vpc.okvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561884377569:route-table/rtb-01a2bbe2b242b3a5d",
            "id": "rtb-01a2bbe2b242b3a5d",
            "owner_id": "561884377569",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-009147e0d35c323cd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public route"
            },
            "tags_all": {
              "Name": "public route"
            },
            "timeouts": null,
            "vpc_id": "vpc-090e88e821d7965eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc-igw",
            "aws_vpc.okvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub1-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071b9698df7ef42ff",
            "route_table_id": "rtb-01a2bbe2b242b3a5d",
            "subnet_id": "subnet-04b14ceb96762106e"
          },
          "dependencies": [
            "aws_internet_gateway.vpc-igw",
            "aws_route_table.public-rt",
            "aws_subnet.Web-1-subnet",
            "aws_vpc.okvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pub-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561884377569:security-group/sg-02ab8b12659e69e36",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ab8b12659e69e36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 888
              }
            ],
            "name": "terraform-20231020121625719200000001",
            "name_prefix": "terraform-",
            "owner_id": "561884377569",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web public sg"
            },
            "tags_all": {
              "Name": "web public sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-090e88e821d7965eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.okvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Web-1-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561884377569:subnet/subnet-04b14ceb96762106e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b14ceb96762106e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "561884377569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "1st web subnet"
            },
            "tags_all": {
              "Name": "1st web subnet"
            },
            "vpc_id": "vpc-090e88e821d7965eb"
          },
          "dependencies": [
            "aws_vpc.okvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "okvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:561884377569:vpc/vpc-090e88e821d7965eb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-043ca214d6a753a3f",
            "default_route_table_id": "rtb-0d508819ad98fc145",
            "default_security_group_id": "sg-075f86e643ecc063f",
            "dhcp_options_id": "dopt-0c1684e8ddd2223e1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-090e88e821d7965eb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d508819ad98fc145",
            "owner_id": "561884377569",
            "tags": {
              "Name": "east-vpc"
            },
            "tags_all": {
              "Name": "east-vpc"
            }
          }
        }
      ]
    }
  ]
}